# codemap

./: .codemapignore.example  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  dist-workspace.toml  lefthook.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
migrations/: 0001_init.sql
src/: doctor.rs  lib.rs  main.rs  types.rs
src/db/: line_index.rs  mod.rs  writer.rs
src/export/: mod.rs
src/index/: mod.rs
src/lsp/: mod.rs
src/mcp/: mod.rs
src/query/: mod.rs  project.rs
src/scip/: mod.rs
src/skills/: mod.rs  skill.md
src/ts/: mod.rs
tests/: export.rs  extract_c.rs  extract_clojure.rs  extract_cpp.rs  extract_csharp.rs  extract_go.rs  extract_java.rs  extract_kotlin.rs  extract_php.rs  extract_py.rs  extract_rust.rs  extract_swift.rs  extract_ts.rs  git_incremental.rs  grep.rs  incremental.rs  index.rs  lsp_enrich.rs  mcp_http.rs  monorepo.rs  query_tools.rs  schema.rs
