[package]
name = "codemap"
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
description = "Deterministic code index for AI agents — token-cheap symbol-level navigation"
license = "MIT"

[lib]
name = "codemap"
path = "src/lib.rs"

[[bin]]
name = "codemap"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled", "load_extension"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
ignore = "0.4"
blake3 = "1.8"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
