[package]
name = "codemap"
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
description = "Deterministic code index for AI agents — token-cheap symbol-level navigation"
license = "MIT"

build = "build.rs"

[features]
default = []
# Serve the MCP tools over HTTP (streamable) in addition to stdio.
mcp-http = ["dep:axum", "rmcp/transport-streamable-http-server"]
# On-demand precise edges from a user-installed language server (never installed by codemap).
tier2-lsp = ["dep:lsp-types"]

[lib]
name = "codemap"
path = "src/lib.rs"

[[bin]]
name = "codemap"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled", "load_extension"] }
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-swift = "0.7"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.5"
blake3 = "1.8"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
scip = "0.5"
protobuf = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "net"] }
axum = { version = "0.8", optional = true }
lsp-types = { version = "0.97", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
